feat: Final E2E fixes, API alignment, docs & code quality